--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -112,7 +112,10 @@
     <integer name="config_wifi_tx_cur_ma">265</integer>
     <integer name="config_wifi_operating_voltage_mv">3600</integer>
     <bool name="config_intrusiveNotificationLed">true</bool>
+    <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
     <bool name="config_enableAutoPowerModes">true</bool>
+    <bool name="config_dozeAfterScreenOff">true</bool>
+    <integer name="config_screenBrightnessDoze">22</integer>
     <bool name="config_freeformWindowManagement">true</bool>
     <bool name="config_useDevInputEventForAudioJack">true</bool>
     <string-array translatable="false" name="config_defaultPinnerServiceFiles">
