star: overlay: limit the number of fingerprints to 4
FP trustlet limits the number to 4.

Change-Id: I6bfe835e113adc001c4eb3d98a2a937019e1927a

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -141,4 +141,5 @@
     <bool name="config_cellBroadcastAppLinks">true</bool>
     <string name="config_radio_access_family">GSM|WCDMA|LTE</string>
     <bool name="config_animateScreenLights">true</bool>
+    <integer name="config_fingerprintMaxTemplatesPerUser">4</integer>
 </resources>
