star: overlay: Animate screen-off
Change-Id: I68117c8e36548412b8797c20f1a8c33f3593c165
Signed-off-by: Jesse Chan <jc@lineageos.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -140,4 +140,5 @@
     <bool name="config_sustainedPerformanceModeSupported">true</bool>
     <bool name="config_cellBroadcastAppLinks">true</bool>
     <string name="config_radio_access_family">GSM|WCDMA|LTE</string>
+    <bool name="config_animateScreenLights">true</bool>
 </resources>
