star: overlay: Advertize HWC2 color transform support
Change-Id: Id0e63007554f2e45221c7e7243c7439467f74c61
Signed-off-by: Jesse Chan <jc@lineageos.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -151,4 +151,5 @@
     <integer-array name="config_keyboardTapVibePattern">
         <item>7</item>
     </integer-array>
+    <bool name="config_setColorTransformAccelerated">true</bool>
 </resources>
