star: overlay: enable doze AOD

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -115,6 +115,8 @@
     <string name="config_dozeComponent">com.android.systemui/com.android.systemui.doze.DozeService</string>
     <bool name="config_enableAutoPowerModes">true</bool>
     <bool name="config_dozeAfterScreenOff">true</bool>
+    <bool name="config_dozeAlwaysOnDisplayAvailable">true</bool>
+    <bool name="config_displayBlanksAfterDoze">true</bool>
     <integer name="config_screenBrightnessDoze">22</integer>
     <bool name="config_freeformWindowManagement">true</bool>
     <bool name="config_useDevInputEventForAudioJack">true</bool>
