--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -108,6 +108,9 @@
     <string-array name="config_mobile_tcp_buffers">
         <item>lte:1048576,3145728,4194304,524288,1572864,2097152</item>
     </string-array>
+    <bool translatable="false" name="config_wifi_dual_band_support">true</bool>
+    <bool translatable="false" name="config_wifi_batched_scan_supported">true</bool>
+    <bool translatable="false" name="config_wifi_background_scan_support">true</bool>
     <bool name="config_enableWifiDisplay">true</bool>
     <integer name="config_wifi_idle_receive_cur_ma">1</integer>
     <integer name="config_wifi_active_rx_cur_ma">65</integer>
