--- a/overlay/frameworks/base/core/res/res/values/lineage_config.xml
+++ b/overlay/frameworks/base/core/res/res/values/lineage_config.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2009 The Android Open Source Project
+<!--
+     Copyright (C) 2017 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,10 +13,6 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<!-- Phone app resources that may need to be customized
-     for different hardware or product builds. -->
 <resources>
-    <!-- Show enabled lte option for lte device -->
-    <bool name="config_enabled_lte" translatable="false">true</bool>
+    <integer name="config_buttonBrightnessSettingDefault">0</integer>
 </resources>
