--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -62,8 +62,10 @@
     <!-- Device have higher than normal aspect ratio sreen -->
     <bool name="config_haveHigherAspectRatioScreen">true</bool>
 
+    <!-- Defines the actions shown in advanced reboot submenu -->
     <string-array name="config_restartActionsList">
         <item>restart</item>
         <item>restart_recovery</item>
+        <item>restart_download</item>
     </string-array>
 </resources>
