universal9810: overlay: disable config_safe_media_volume_enabled
Change-Id: I39901da418c2429b1ea32a8b7447cdd7e06d4df9

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -405,4 +405,7 @@
          is interactive. -->
     <bool name="config_volumeHushGestureEnabled">false</bool>
 
+    <!-- Whether safe headphone volume is enabled or not (country specific). -->
+    <bool name="config_safe_media_volume_enabled">false</bool>
+
 </resources>
