--- a/overlay-aosp/frameworks/base/packages/SystemUI/res/values/dimens.xml
+++ b/overlay-aosp/frameworks/base/packages/SystemUI/res/values/dimens.xml
@@ -18,4 +18,10 @@
 <resources>
     <!-- The starting padding for the clock in the status bar. -->
     <dimen name="status_bar_clock_starting_padding">2dp</dimen>
+
+    <!-- the padding on the start of the statusbar -->
+    <dimen name="status_bar_padding_start">12dp</dimen>
+
+    <!-- the padding on the end of the statusbar -->
+    <dimen name="status_bar_padding_end">12dp</dimen>
 </resources>
