universal9810: overlay: set config_displayLightSensorType
SENSOR NAME:           TMD4906 lux Sensor
       VENDOR:         TMD4906 lux Sensor
       TYPE:           5
       TYPE_AS_STRING: android.sensor.light
       FLAGS:          2

Change-Id: Id0272beabd7606fe7e115285976400c11a3bc57d

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -122,6 +122,10 @@
     <!-- ### DISPLAY                                                    -->
     <!-- ############################################################## -->
 
+    <!-- The type of the light sensor to be used by the display framework for things like
+         auto-brightness. If unset, then it just gets the default sensor of type TYPE_LIGHT. -->
+    <string name="config_displayLightSensorType">android.sensor.light</string>
+
     <!-- If this is true, the screen will fade off. -->
     <bool name="config_animateScreenLights">false</bool>
 
